--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Joe Karlsson<joekarlsson1@gmail.com>",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "jquery": "^3.4.1",
     "react": "^16.8.4",
