--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "12.x"
+    "node": "12.1"
   },
   "dependencies": {
     "jquery": "^3.4.1",
