--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jquery": "^3.4.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
